[package]
name = "paramdex-rs"
version = "0.1.0+build.2"
edition = "2021"
license = "MPL-2.0"
description = "Utilities for handling and deserializing a Paramdex / individual Paramdef XMLs for modifying Souls games"
authors = ["CerulanLumina <CerulanLumina@users.noreply.github.com>"]
repository = "https://github.com/CerulanLumina/paramdex-rs/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
roxmltree = "0.15.0"
thiserror = "1.0.37"
pest = "2.4.0"
pest_derive = "2.4.0"

[dev-dependencies]
walkdir = "2.3.2"
